Just an addition.

--- a/project overview.html
+++ b/project overview.html
@@ -17,5 +17,9 @@
 		
 		<h2>Second idea</h2>
 		<p>Show rules, popularity.</p>
+        
+        <br>
+        <br>
+        <p>Just an addition</p>
 	</body>
 </html>
