--- a/project overview.html
+++ b/project overview.html
@@ -20,6 +20,7 @@
         
         <br>
         <br>
-        <p>Just an addition</p>
+        <p>Just an addition.</p>
+        <p>And another addition.</p>
 	</body>
 </html>
