--- a/siteproject.html
+++ b/siteproject.html
@@ -1,10 +1,10 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="background.css">
-	<title>The holy ale beer</title> 
+	<title>The Holy Ale Beer</title> 
 </head>
 <body>
-	<h1> The holy ale of beer </h1>
+	<h1> The Holy Ale of Beer </h1>
 	
 		<div align="left" id=colortexte><p> Test test
 		</p></div>
