--- a/siteproject.html
+++ b/siteproject.html
@@ -9,6 +9,7 @@
 		<div align="left" id=colortexte><p> Test test
 		</p></div>
 		<div align="center" id=colortexte><p> Test 2 Test 2
+		bla bla bla
 		</p></div>
 </body>
 </html>
