--- a/siteproject.html
+++ b/siteproject.html
@@ -1,15 +1,14 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="background.css">
-	<title>The Holy Ale Beer</title> 
+	<title>The Holy Ale Of Beer</title> 
 </head>
 <body>
-	<h1> The Holy Ale of Beer </h1>
+	<h1> The holy ale of beer </h1>
 	
 		<div align="left" id=colortexte><p> Test test
 		</p></div>
 		<div align="center" id=colortexte><p> Test 2 Test 2
-		bla bla bla
 		</p></div>
 </body>
 </html>
