--- a/siteproject.html
+++ b/siteproject.html
@@ -4,7 +4,7 @@
 	<title>The Holy Ale Of Beer</title> 
 </head>
 <body>
-	<h1> The holy ale of beer </h1>
+	<h1> The Holy Ale Of Beer </h1>
 	
 		<div align="left" id=colortexte><p> Test test
 		</p></div>
