added media headings

--- a/siteproject.html
+++ b/siteproject.html
@@ -10,5 +10,14 @@
 		</p></div>
 		<div align="center" id=colortexte><p> Test 2 Test 2
 		</p></div>
+		<div class="media">
+  <a class="pull-left" href="#">
+    <img class="media-object" src="..." alt="...">
+  </a>
+  <div class="media-body">
+    <h4 class="media-heading">Media heading</h4>
+    ...
+  </div>
+</div>
 </body>
 </html>
