rewowkrked heading text

--- a/siteproject.html
+++ b/siteproject.html
@@ -16,7 +16,7 @@
   </a>
   <div class="media-body">
     <h4 class="media-heading">Media heading</h4>
-    Erster Testtext
+    Erster Testtext für media headings
   </div>
 </div>
 </body>
