--- a/project_sportbroadcast.html
+++ b/project_sportbroadcast.html
@@ -7,11 +7,15 @@
 <body>
 	<div class="container">
 	<h1>Project: Sportbroadcast</h1>
-
+	<h2>Projectdata</h2>
+	<dl class="dl-horizontal">
+		<dt>Domain</dt><dd>?</dd>
+		<dt>Github</dt><dd>?</dd>
+	</dl>
 	<h2>Idea</h2>
-	Show different strategies between sports/eSports.
+	<p>Show different strategies between sports/eSports.</p>
 
-	<h2>Screens</h2>
+	<h3>Screens</h3>
 	
 	<h3>Elements</h3>
 		<ul>
