--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -7,9 +7,14 @@
 <body>
 	<div class="container">
 	<h1>Project: The Holy Ale Of Beer</h1>
+	<h2>Projectdata</h2>
+	<dl class="dl-horizontal">
+		<dt>Domain</dt><dd>theholyale.com</dd>
+		<dt>Github</dt><dd>?</dd>
+	</dl>
 
 	<h2>Idea</h2>
-	
+	<p></p>
 
 	<h3>Screens</h3>
 
