--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -10,7 +10,7 @@
 	<h2>Projectdata</h2>
 	<dl class="dl-horizontal">
 		<dt>Domain</dt><dd>theholyale.com</dd>
-		<dt>Github</dt><dd>?</dd>
+		<dt>Github</dt><dd>Holy-Ale-Of-Beer</dd>
 	</dl>
 
 	<h2>Idea</h2>
@@ -47,7 +47,7 @@
 	<table class="table">
 	<tr class="active"><td colspan="3">Dienstag, 23. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-	<tr> <td>Adrian</td><td>?</td><td></td> </tr>
+	<tr> <td>Adrian</td><td>Bier Data Bank</td><td></td> </tr>
 	<tr> <td>Andy</td><td>Beermakers</td><td></td> </tr>
 	<tr> <td>Davide</td><td>Design</td><td></td> </tr>
 	<tr> <td>Quentin</td><td>Beershops</td><td></td> </tr>
