--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -10,7 +10,7 @@
 	<h2>Projectdata</h2>
 	<dl class="dl-horizontal">
 		<dt>Domain</dt><dd>theholyale.com</dd>
-		<dt>Github</dt><dd>Holy-Ale-Of-Beer</dd>
+		<dt>Github</dt><dd>github.com/Quentinflueckiger/Holy-Ale-Of-Beer</dd>
 	</dl>
 
 	<h2>Idea</h2>
