Added description and Domain

--- a/project_sportbroadcast.html
+++ b/project_sportbroadcast.html
@@ -9,22 +9,21 @@
 	<h1>Project: Sportbroadcast</h1>
 	<h2>Projectdata</h2>
 	<dl class="dl-horizontal">
-		<dt>Domain</dt><dd>?</dd>
+		<dt>Domain</dt><dd>www.broadsport.ch</dd>
 		<dt>Github</dt><dd><a href="https://github.com/B3N5CH1/SiteProject-Sport">GitHub BroadSport</a></dd>
 	</dl>
 	<h2>Idea</h2>
-	<p>Show different strategies between sports/eSports.</p>
+	<p>To let people submit data for a local, national, continental or world wide sport event.<br>
+    To print the events on the start page. First sorted by Date, then by popularity.</p>
 
 	<h3>Screens</h3>
 	
 	<h3>Elements</h3>
 		<ul>
 			<li>Dropdown Menu</li>
-			<li>Login</li>
+			<li>Submit</li>
 			<li>Search Bar</li>
-			<li>Videos</li>
-			<li>Pictures</li>
-			<li>Maybe Background Music</li>
+			<li></li>
 		</ul>
 	<h3>
 
