--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -14,7 +14,8 @@
 	</dl>
 
 	<h2>Idea</h2>
-	<p></p>
+	<p>To have a place where you can look for information about beer from the whole world,
+	some shops around the world and some critics.</p>
 
 	<h3>Screens</h3>
 
