--- a/project_sportbroadcast.html
+++ b/project_sportbroadcast.html
@@ -9,7 +9,7 @@
 	<h1>Project: Sportbroadcast</h1>
 	<h2>Projectdata</h2>
 	<dl class="dl-horizontal">
-		<dt>Domain</dt><dd>?</dd>
+		<dt>Domain</dt><dd>broadsport.ch</dd>
 		<dt>Github</dt><dd>?</dd>
 	</dl>
 	<h2>Idea</h2>
