--- a/project_sportbroadcast.html
+++ b/project_sportbroadcast.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -9,13 +9,8 @@
 	<h1>Project: Sportbroadcast</h1>
 	<h2>Projectdata</h2>
 	<dl class="dl-horizontal">
-<<<<<<< HEAD
-		<dt>Domain</dt><dd>broadsport.ch</dd>
-		<dt>Github</dt><dd>?</dd>
-=======
 		<dt>Domain</dt><dd>www.broadsport.ch</dd>
 		<dt>Github</dt><dd><a href="https://github.com/B3N5CH1/SiteProject-Sport">GitHub BroadSport</a></dd>
->>>>>>> origin/master
 	</dl>
 	<h2>Idea</h2>
 	<p>To let people submit data for a local, national, continental or world wide sport event.<br>
