--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -49,8 +49,8 @@
 	<tr class="active"><td colspan="3">Dienstag, 23. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
 	<tr> <td>Adrian</td><td>Bier Data Bank</td><td></td> </tr>
-	<tr> <td>Andy</td><td>Beermakers</td><td></td> </tr>
-	<tr> <td>Davide</td><td>Design</td><td></td> </tr>
+	<tr> <td>Andy</td><td>Beermakers</td><td>Gemeinsam Design Erstellen von der Homepage, top menu vom Bootstrap integriert</td> </tr>
+	<tr> <td>Davide</td><td>Design</td><td>Gemeinsam Design Erstellen von der Homepage, top menu vom Bootstrap integriert</td> </tr>
 	<tr> <td>Quentin</td><td>Beershops</td><td></td> </tr>
 	<tr class="active"><td colspan="3">Mittwoch, 24. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
