--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -53,6 +53,9 @@
 	<tr> <td>Davide</td><td>Design</td><td>Gemeinsam Design Erstellen von der Homepage, top menu vom Bootstrap integriert</td> </tr>
 	<tr class="active"><td colspan="3">Mittwoch, 24. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
+	<tr> <td>Davide</td><td>Design</td><td>Gemeinsam Design Erstellen von der Homepage, hinterground Bild</td> </tr>
+	<tr> <td>Adrian</td><td>Bier Data Bank</td><td>Grobe Datenbankstruktur, rekursiver Zugriff auf Regionen</td> </tr>
+	<tr> <td>Quentin</td><td>Bier Shops</td><td>Text links und recht von carousel</td> </tr>
 	<tr class="active"><td colspan="3">Donnerstag, 25. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
 	<tr class="active"><td colspan="3">Freitag, 26. 09.</td></tr>
