--- a/js_tasks/Beni-PI.html
+++ b/js_tasks/Beni-PI.html
@@ -20,5 +20,6 @@
                 document.getElementById("piDemo").innerHTML = Math.PI;
             }
         </script>
+        <a href="Mahmoud.html">Mahmoud.html</a>
     </body>
 </html>
