--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -9,7 +9,7 @@
 	<h1>Project: The Holy Ale Of Beer</h1>
 	<h2>Projectdata</h2>
 	<dl class="dl-horizontal">
-		<dt>Domain</dt><dd>theholyale.com</dd>
+		<dt>Domain</dt><dd><a href="www.theholyale.com">theholyale.com</a></dd>
 		<dt>Github</dt><dd>github.com/Quentinflueckiger/Holy-Ale-Of-Beer</dd>
 	</dl>
 
