--- a/project_broadsport.html
+++ b/project_broadsport.html
@@ -37,15 +37,15 @@
         
 	<tr class="active"><td colspan="3">Mittwoch, 24. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-    <tr> <td>Mahmoud</td><td>Submit Button, Datum/Uhrzeit?!</td><td></td> </tr>
-	<tr> <td>Daniil</td><td>Maps in Submit, DB ausführungsbereit</td><td></td> </tr>
-	<tr> <td>Beni</td><td>NavBar komplett, Layout aufbessern...</td><td></td> </tr>
+    <tr> <td>Mahmoud</td><td>Submit Button, Datum/Uhrzeit?!</td><td>Erreicht</td> </tr>
+	<tr> <td>Daniil</td><td>Maps in Submit, DB ausführungsbereit</td><td>Erreicht</td> </tr>
+	<tr> <td>Beni</td><td>NavBar komplett, Layout aufbessern...</td><td>Teilweise, NavBar noch nicht optimal, Layout besser.</td> </tr>
 	
 	<tr class="active"><td colspan="3">Donnerstag, 25. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-    <tr> <td>Mahmoud</td><td></td><td></td> </tr>
-	<tr> <td>Daniil</td><td></td><td></td> </tr>
-	<tr> <td>Beni</td><td></td><td></td> </tr>
+    <tr> <td>Mahmoud</td><td>Datums- und Zeitformat, a:hover</td><td></td> </tr>
+	<tr> <td>Daniil</td><td></td>DB auslesen, Karte?<td></td> </tr>
+	<tr> <td>Beni</td><td></td><td>Layout, NavBar, Karte?</td> </tr>
         
 	<tr class="active"><td colspan="3">Freitag, 26. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
