--- a/project_sportbroadcast.html
+++ b/project_sportbroadcast.html
@@ -9,7 +9,7 @@
 	<h1>Project: Sportbroadcast</h1>
 	<h2>Projectdata</h2>
 	<dl class="dl-horizontal">
-		<dt>Domain</dt><dd><a href="www.broadsport.ch">www.broadsport.ch</a></dd>
+		<dt>Domain</dt><dd><a href="http://www.broadsport.ch">www.broadsport.ch</a></dd>
 		<dt>Github</dt><dd><a href="https://github.com/B3N5CH1/SiteProject-Sport">GitHub BroadSport</a></dd>
 	</dl>
 	<h2>Idea</h2>
