--- a/project_broadsport.html
+++ b/project_broadsport.html
@@ -43,15 +43,15 @@
 	
 	<tr class="active"><td colspan="3">Donnerstag, 25. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-    <tr> <td>Mahmoud</td><td>Datums- und Zeitformat, a:hover</td><td></td> </tr>
-	<tr> <td>Daniil</td><td></td>DB auslesen, Karte?<td></td> </tr>
-	<tr> <td>Beni</td><td></td><td>Layout, NavBar, Karte?</td> </tr>
+    <tr> <td>Mahmoud</td><td>Datums- und Zeitformat, a:hover</td><td>Noch nicht, Hover schön umgesetzt</td> </tr>
+	<tr> <td>Daniil</td><td>DB auslesen, Karte?</td><td>Grundsätzlich möglich, Darstellung noch nicht schön, Karte vernachlässigt.</td> </tr>
+	<tr> <td>Beni</td><td>Layout, NavBar, Karte?</td><td>Mehr oder weniger. Karte vernachlässigt</td> </tr>
         
 	<tr class="active"><td colspan="3">Freitag, 26. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-    <tr> <td>Mahmoud</td><td></td><td></td> </tr>
-	<tr> <td>Daniil</td><td></td><td></td> </tr>
-	<tr> <td>Beni</td><td></td><td></td> </tr>
+    <tr> <td>Mahmoud</td><td>Datums- und Zeitformat, ...</td><td></td> </tr>
+	<tr> <td>Daniil</td><td>Karte - Marker, Besucher Counter</td><td></td> </tr>
+	<tr> <td>Beni</td><td>Layout DB Output, About</td><td></td> </tr>
     
 	</table>
 	</div>
