--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -1,7 +1,8 @@
-<html>
-<head>
+
+<!-- saved from url=(0080)file:///home/adrian/Dokumente/bildung/bfh/passerelle/web/project_theholyale.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta charset="utf-8"> 
-	<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./project_theholyale_files/bootstrap.min.css">
 	<title>The Holy Ale Of Beer</title> 
 </head>
 <body>
@@ -46,7 +47,7 @@
 
 	<h2>Daily Projectgoals</h2>
 	<table class="table">
-	<tr class="active"><td colspan="3">Dienstag, 23. 09.</td></tr>
+	<tbody><tr class="active"><td colspan="3">Dienstag, 23. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
 	<tr> <td>Adrian</td><td>Bier Data Bank</td><td>Grobe Datenbankstruktur, rekursiver Zugriff auf Regionen</td> </tr>
 	<tr> <td>Andy</td><td>Beermakers</td><td>Gemeinsam Design Erstellen von der Homepage, top menu vom Bootstrap integriert</td> </tr>
@@ -56,8 +57,11 @@
 	<tr class="active"><td colspan="3">Donnerstag, 25. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
 	<tr class="active"><td colspan="3">Freitag, 26. 09.</td></tr>
-	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-	</table>
+	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr><tr class="active"><td colspan="3">Dienstag 30. 09.</td></tr>
+
+<tr> <td>Adrian</td><td>DB mit Django, erste views</td><td></td> </tr>
+	</tbody></table>
 	</div>
-</body>
-</html>
+
+
+</body></html>
