--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -10,7 +10,7 @@
 	<h1>Project: The Holy Ale Of Beer</h1>
 	<h2>Projectdata</h2>
 	<dl class="dl-horizontal">
-		<dt>Domain</dt><dd><a href="http://www.theholyale.com">theholyale.com</a></dd>
+		<dt>Domain</dt><dd><a href="http://www.theholyale.com/">theholyale.com</a></dd>
 		<dt>Github</dt><dd>github.com/Quentinflueckiger/Holy-Ale-Of-Beer</dd>
 	</dl>
 
@@ -62,9 +62,10 @@
 	<tr class="active"><td colspan="3">Freitag, 26. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr><tr class="active"><td colspan="3">Dienstag 30. 09.</td></tr>
 
-<tr> <td>Adrian</td><td>DB mit Django, erste views</td><td></td> </tr>
+<tr> <td>Adrian</td><td>DB mit Django, erste views</td><td>Anfangs etwas mühe mit URL-mapping, erst einige beispiel Views (à la Hello World)</td> </tr>
 	</tbody></table>
 	</div>
+
 
 
 </body></html>
