--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -63,6 +63,9 @@
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr><tr class="active"><td colspan="3">Dienstag 30. 09.</td></tr>
 
 <tr> <td>Adrian</td><td>DB mit Django, erste views</td><td>Anfangs etwas mühe mit URL-mapping, erst einige beispiel Views (à la Hello World)</td> </tr>
+  	<tr class="active"><td colspan="3">Mittwoch 1. 10.</td></tr>	
+  	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
+  	<tr> <td>Adrian</td><td>An Views weiterarbeiten</td><td></td> </tr>
 	</tbody></table>
 	</div>
 
