--- a/project_broadsport.html
+++ b/project_broadsport.html
@@ -62,14 +62,14 @@
     <tr class="active"><td colspan="3">Dienstag, 30. 09.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
     <tr> <td>Mahmoud</td><td>Krank...</td><td>Krank...</td> </tr>
-	<tr> <td>Daniil</td><td>GeoDaten</td><td></td> </tr>
-	<tr> <td>Beni</td><td>Datum DB Eingabe</td><td></td> </tr>
+	<tr> <td>Daniil</td><td>GeoDaten</td><td>Marker setzen geht, entfernen nicht.</td> </tr>
+	<tr> <td>Beni</td><td>Datum DB Eingabe</td><td>Datum geht, Uhrzeit teilweise, WebseitenLink hinzugefügt. Alles auf dem Server gleich lauffähig wie Test.</td> </tr>
     
     <tr class="active"><td colspan="3">Mittwoch, 01.10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-    <tr> <td>Mahmoud</td><td></td><td></td> </tr>
-	<tr> <td>Daniil</td><td></td><td></td> </tr>
-	<tr> <td>Beni</td><td></td><td></td> </tr>
+    <tr> <td>Mahmoud</td><td>Anwesenheit ;-)</td><td></td> </tr>
+	<tr> <td>Daniil</td><td>GeoDaten fertig</td><td></td> </tr>
+	<tr> <td>Beni</td><td>Uhrzeit richtig einlesen, Pflichtfelder erstellen</td><td></td> </tr>
     
     <tr class="active"><td colspan="3">Donnerstag, 02.10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
