Gemachte arbeit Dan

--- a/project_broadsport.html
+++ b/project_broadsport.html
@@ -68,7 +68,7 @@
     <tr class="active"><td colspan="3">Mittwoch, 01.10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
     <tr> <td>Mahmoud</td><td>Anwesenheit ;-)</td><td></td> </tr>
-	<tr> <td>Daniil</td><td>GeoDaten fertig</td><td></td> </tr>
+	<tr> <td>Daniil</td><td>GeoDaten fertig</td><td>Marker auf leaflet verschieben geschafft, geodaten noch nicht ganz</td> </tr>
 	<tr> <td>Beni</td><td>Uhrzeit richtig einlesen, Pflichtfelder erstellen</td><td></td> </tr>
     
     <tr class="active"><td colspan="3">Donnerstag, 02.10.</td></tr>
