--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -70,8 +70,12 @@
 	<tr> <td>Adrian</td><td>DB mit Django, erste views</td><td>Anfangs etwas mühe mit URL-mapping, erst einige beispiel Views (à la Hello World)</td> </tr>
   	<tr class="active"><td colspan="3">Mittwoch 1. 10.</td></tr>	
   	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-  	<tr> <td>Adrian</td><td>An Views weiterarbeiten</td><td></td> </tr>
+  	<tr> <td>Adrian</td><td>An Views weiterarbeiten</td><td>Simple Auflistung d.Biere funktioniert (noch kein Design)</td></tr>
 	<tr> <td>Andy</td><td>Beers.html design</td><td>Designs kongruent machen über verschiedene webpages</td> </tr>
+  	<tr class="active"><td colspan="3">Donnerstag 2. 10.</td></tr>	
+  	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
+  	<tr> <td>Adrian</td><td></td><td></td></tr>
+
 	</tbody></table>
 	</div>
 
