--- a/project_broadsport.html
+++ b/project_broadsport.html
@@ -68,14 +68,14 @@
     <tr class="active"><td colspan="3">Mittwoch, 01.10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
     <tr> <td>Mahmoud</td><td>Anwesenheit ;-)</td><td></td> </tr>
-	<tr> <td>Daniil</td><td>GeoDaten fertig</td><td></td> </tr>
-	<tr> <td>Beni</td><td>Uhrzeit richtig einlesen, Pflichtfelder erstellen</td><td></td> </tr>
+	<tr> <td>Daniil</td><td>GeoDaten fertig</td><td>Marker korrekt. SQL Injection getestet</td> </tr>
+	<tr> <td>Beni</td><td>Uhrzeit richtig einlesen, Pflichtfelder erstellen</td><td>Uhrzeit gemacht.</td> </tr>
     
     <tr class="active"><td colspan="3">Donnerstag, 02.10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-    <tr> <td>Mahmoud</td><td</td><td></td> </tr>
-	<tr> <td>Daniil</td><td></td><td></td> </tr>
-	<tr> <td>Beni</td><td></td><td></td> </tr>
+    <tr> <td>Mahmoud</td><td>Anwesenheit</td><td></td> </tr>
+	<tr> <td>Daniil</td><td>About Bilder, GeoDaten einlesen</td><td></td> </tr>
+	<tr> <td>Beni</td><td>DB schöner & komplett auslesen</td><td></td> </tr>
     
     <tr class="active"><td colspan="3">Freitag, 03.10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
