--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -74,7 +74,7 @@
 	<tr> <td>Andy</td><td>Beers.html design</td><td>Designs kongruent machen über verschiedene webpages</td> </tr>
   	<tr class="active"><td colspan="3">Donnerstag 2. 10.</td></tr>	
   	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-  	<tr> <td>Adrian</td><td></td><td></td></tr>
+  	<tr> <td>Adrian</td><td>weiter in Django Tutorial, Bier Formular</td><td></td></tr>
 
 	</tbody></table>
 	</div>
