--- a/js_tasks/jsquentin.html
+++ b/js_tasks/jsquentin.html
@@ -2,10 +2,10 @@
 <head>
 </head>
 <body>
-	<a href="http://www.bfh.ch/" id="demo">Clickez ici!</p></a>
+	<a href="http://www.bfh.ch/" onclick="myFunction()">Clickez ici!</p></a>
 	<script>
 	
-	document.getElementById("demo").onclick = function() {myFunction()};
+	<!--document.getElementById("demo").onclick = function() {myFunction()};-->
 
 	function myFunction() {
 		confirm("This is Sparta");
