--- a/project_broadsport.html
+++ b/project_broadsport.html
@@ -75,7 +75,7 @@
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
     <tr> <td>Mahmoud</td><td>Anwesenheit</td><td></td> </tr>
 	<tr> <td>Daniil</td><td>About Bilder, GeoDaten einlesen</td><td></td> </tr>
-	<tr> <td>Beni</td><td>DB schöner & komplett auslesen</td><td></td> </tr>
+	<tr> <td>Beni</td><td>Pflichtfelder mit if in php...</td><td></td> </tr>
     
     <tr class="active"><td colspan="3">Freitag, 03.10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
