--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -77,7 +77,7 @@
 	<tr> <td>Quentin</td><td>Shops.html / About.html design</td><td>Réorganisation du carousel et écriture des descriptions des shops</td> </tr>
   	<tr class="active"><td colspan="3">Donnerstag 2. 10.</td></tr>	
   	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-  	<tr> <td>Adrian</td><td>weiter in Django Tutorial, Bier Formular</td><td></td></tr>
+  	<tr> <td>Adrian</td><td>weiter in Django Tutorial, Bier Formular</td><td>Formular Bierbewertung (noch ohne Datenverarbeitung)</td></tr>
 	<tr> <td>Quentin</td><td>Shops.html design</td><td>Organiser les shops, ajouter de nouveau shops</td> </tr>
 
 	</tbody></table>
