--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -81,7 +81,8 @@
 	<tr> <td>Quentin</td><td>Shops.html design</td><td>Organiser les shops, ajouter de nouveau shops</td> </tr>
 	<tr class="active"><td colspan="3">Freitag 3. 10.</td></tr>	
   	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-  	<tr> <td>Adrian</td><td>Laptop am Do kaputt ;-(</td><td>Laptop-shopping + System einrichten ;-)</td></tr><tr class="active"><td colspan="3">Donnerstag 2. 10.</td></tr>	
+  	<tr> <td>Adrian</td><td>Laptop am Do kaputt ;-(</td><td>Laptop-shopping + System einrichten ;-)</td></tr><tr class="active">
+  	<td colspan="3">Montag 6. 10.</td></tr>	
   	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
   	<tr> <td>Adrian</td><td>Fortsetzung Donnerstag</td><td></td></tr>
 
