--- a/project_broadsport.html
+++ b/project_broadsport.html
@@ -81,7 +81,7 @@
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
     <tr> <td>Mahmoud</td><td>Erscheinen</td><td>Rauswurf aus dem Team</td> </tr>
 	<tr> <td>Daniil</td><td>GeoDaten & Suche</td><td>Suche funktioniert einwandfrei</td> </tr>
-	<tr> <td>Beni</td><td>DB Output</td><td>GeoDaten werden in DB eingelesen.</td> </tr>
+	<tr> <td>Beni</td><td>DB Output</td><td>add.php if's komplett überarbeitet, GeoDaten werden in DB eingelesen.</td> </tr>
     
     <tr class="active"><td colspan="3">Dienstag, 07.10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
