--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -82,9 +82,12 @@
 	<tr class="active"><td colspan="3">Freitag 3. 10.</td></tr>	
   	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
   	<tr> <td>Adrian</td><td>Laptop am Do kaputt ;-(</td><td>Laptop-shopping + System einrichten ;-)</td></tr><tr class="active">
-  	<td colspan="3">Montag 6. 10.</td></tr>	
+  	<tr class="active"><td colspan="3">Montag 6. 10.</td></tr>
   	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
   	<tr> <td>Adrian</td><td>Fortsetzung Donnerstag</td><td></td></tr>
+	<tr class="active"><td colspan="3">Dienstag 7. 10.</td></tr>
+	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
+	<tr> <td>Quentin</td><td>Neu Carousel bauen</td><td>
 
 	</tbody></table>
 	</div>
