Ziele + Syntaxkorrektur (Tags schliessen)

--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -87,7 +87,8 @@
   	<tr> <td>Adrian</td><td>Fortsetzung Donnerstag</td><td></td></tr>
 	<tr class="active"><td colspan="3">Dienstag 7. 10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-	<tr> <td>Quentin</td><td>Neu Carousel bauen</td><td>
+	<tr> <td>Quentin</td><td>Neu Carousel bauen</td><td></td></tr>
+	<tr> <td>Adrian</td><td>Django Template Grobstruktur</td><td></td></tr>
 
 	</tbody></table>
 	</div>
