--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -88,7 +88,12 @@
 	<tr class="active"><td colspan="3">Dienstag 7. 10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
 	<tr> <td>Quentin</td><td>Neu Carousel bauen</td><td></td></tr>
-	<tr> <td>Adrian</td><td>Django Template Grobstruktur</td><td></td></tr>
+	<tr> <td>Adrian</td><td>Django Template Grobstruktur</td><td>Prinzip erlickt</td></tr>
+	<tr class="active"><td colspan="3">Mittwoch 8. 10.</td></tr>
+	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
+	<tr> <td>Adrian</td><td>Weiter an Django Template</td><td></td></tr>
+	
+	
 
 	</tbody></table>
 	</div>
