--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -91,7 +91,10 @@
 	<tr> <td>Adrian</td><td>Django Template Grobstruktur</td><td>Prinzip erlickt</td></tr>
 	<tr class="active"><td colspan="3">Mittwoch 8. 10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
-	<tr> <td>Adrian</td><td>Weiter an Django Template</td><td></td></tr>
+	<tr> <td>Adrian</td><td>Weiter an Django Template</td><td>Grundgerüst steht, static inhalte funktionieren erst lokal</td></tr>
+	<tr class="active"><td colspan="3">Donnerstag 9. 10.</td></tr>
+	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
+	<tr> <td>Adrian</td><td>Static Inhalte auf Server zum laufen bringen</td><td></td></tr>
 	
 	
 
