--- a/project_broadsport.html
+++ b/project_broadsport.html
@@ -91,8 +91,12 @@
     <tr class="active"><td colspan="3">Mittwoch, 08.10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
 	<tr> <td>Daniil</td><td>Suche in einer Hauptseite integrieren, +/-100 km IP übersicht</td><td></td> </tr>
-	<tr> <td>Beni</td><td></td><td></td> </tr>
+	<tr> <td>Beni</td><td></td><td>Krank</td> </tr>
     
+    <tr class="active"><td colspan="3">Mittwoch, 08.10.</td></tr>
+	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
+	<tr> <td>Daniil</td><td>+/-100 km IP übersicht, Marker/Event Link</td><td></td> </tr>
+	<tr> <td>Beni</td><td>Marker PopUp mit Titel, DB Output</td><td></td> </tr>
     
 	</table>
 	</div>
