--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -92,9 +92,12 @@
 	<tr class="active"><td colspan="3">Mittwoch 8. 10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
 	<tr> <td>Adrian</td><td>Weiter an Django Template</td><td>Grundgerüst steht, static inhalte funktionieren erst lokal</td></tr>
+	<tr> <td>Quentin</td><td>Random Carousel</td><td></td></tr>
 	<tr class="active"><td colspan="3">Donnerstag 9. 10.</td></tr>
 	<tr> <td>Wer</td><td>Was</td><td>Erreicht? / Notizen</td> </tr>
 	<tr> <td>Adrian</td><td>Static Inhalte auf Server zum laufen bringen</td><td>erreicht</td></tr>
+	<tr class="active"><td colspan="3">Montag 13. 10.</td></tr>
+	<tr> <td>Quentin</td><td>Trying to understand how the new template work</td><td></td></tr>
 	
 	
 
