--- a/project_theholyale.html
+++ b/project_theholyale.html
@@ -1,8 +1,6 @@
-
-<!-- saved from url=(0080)file:///home/adrian/Dokumente/bildung/bfh/passerelle/web/project_theholyale.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta charset="utf-8"> 
-	<link rel="stylesheet" type="text/css" href="./project_theholyale_files/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<title>The Holy Ale Of Beer</title> 
 </head>
 <body>
